--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,7 @@ Assets/Photon/PhotonVoice/PhotonVoiceLibs/x86_64/opus_egpv.dll.meta
 Assets/Resources/Map/Buildings/Prefabs/Canal2b.prefab.meta
 Assets/Scripts/ApplicationManagers/ApplicationEncoder.cs
 Assets/Scripts/ApplicationManagers/ApplicationEncoder.cs.meta
+
+# AssetBundle
+Assets/AssetBundle/*
+Assets/AssetBundle.meta
